# SparkDBTTransformation

./: docker-compose.yml
ml-learn/: pyproject.toml
postgres-server/: Dockerfile  entrypoint.sh
spark-server/: entrypoint_worker.sh
transformation/: .gitignore  .sqlfluff  .user.yml  Dockerfile  README.md  entrypoint.sh  profiles.yml
transformation/ingestion/: __main__.py  ingest.py  statistella_ingest.py  utils.py
transformation/macros/: union_by_columns.sql
transformation/models/: sources.yml
transformation/models/staging/: stg_full.sql  stg_raw_data.sql  stg_test.sql  stg_train.sql
