[tool.poetry]
name = "ml"
version = "0.1.0"
description = "ML pipeline building application"
authors = ["dinhtuan-zzz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.2.3,<3.0.0"
joblib = ">=1.4.2,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
pyarrow = "18"
llvmlite = ">=0.44.0,<0.45.0"
numba = ">=0.61.0,<0.62.0"
shap = ">=0.46.0,<0.47.0"
lightgbm = ">=4.6.0,<5.0.0"
xgboost = ">=2.1.3,<3.0.0"
scipy = ">=1.15.1,<2.0.0"
optuna = ">=4.2.0,<5.0.0"
sqlalchemy = ">=2.0.37,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
pyyaml = ">=6.0.2,<7.0.0"
pandas-gbq = ">=0.26.1,<0.27.0"
pyspark = "3.3.2"
delta-spark = "2.2.0"
mlflow = "^2.20.2"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
